--- a/package.json
+++ b/package.json
@@ -8,9 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.7",
+    "axios": "^0.25.0",
+    "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.26.1",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "eslint": "8.6.0",
